--- a/SurRound/View/Profile/Base.lproj/Profile.storyboard
+++ b/SurRound/View/Profile/Base.lproj/Profile.storyboard
@@ -60,6 +60,9 @@
                                                 <rect key="frame" x="40" y="1" width="18.333333333333329" height="22"/>
                                                 <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <state key="normal" image="ellipsis" catalog="system"/>
+                                                <connections>
+                                                    <action selector="moreActionButton:" destination="y53-h9-qyE" eventType="touchUpInside" id="LlL-Im-TGq"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
