--- a/SurRound/View/PostListCell/ImagePostListCell.xib
+++ b/SurRound/View/PostListCell/ImagePostListCell.xib
@@ -82,7 +82,7 @@
                             <constraint firstItem="IbJ-8b-DfJ" firstAttribute="leading" secondItem="F5l-ND-4mn" secondAttribute="leading" constant="4" id="xqy-fV-ink"/>
                         </constraints>
                     </view>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icons_Avatar" translatesAutoresizingMaskIntoConstraints="NO" id="nsO-dp-4ip">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icons_Avatar" translatesAutoresizingMaskIntoConstraints="NO" id="nsO-dp-4ip">
                         <rect key="frame" x="16" y="16" width="48" height="48"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="48" id="ED3-Qt-6zo"/>
