--- a/SurRound/View/PostListCell/TextPostListCell.xib
+++ b/SurRound/View/PostListCell/TextPostListCell.xib
@@ -74,7 +74,7 @@
                             <constraint firstItem="f1l-Vb-H5r" firstAttribute="leading" secondItem="1fN-6O-NaZ" secondAttribute="trailing" constant="8" id="o1v-4T-IzR"/>
                         </constraints>
                     </view>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icons_Avatar" translatesAutoresizingMaskIntoConstraints="NO" id="AhG-kc-evu">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icons_Avatar" translatesAutoresizingMaskIntoConstraints="NO" id="AhG-kc-evu">
                         <rect key="frame" x="16" y="16" width="48" height="48"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="48" id="Bbu-mM-p3j"/>
