--- a/SurRound/View/Explore/TrendingListGridCell.xib
+++ b/SurRound/View/Explore/TrendingListGridCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16085" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16078.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,9 +15,23 @@
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="224" height="183"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="O5B-tK-zs3">
+                        <rect key="frame" x="0.0" y="0.0" width="224" height="183"/>
+                    </imageView>
+                </subviews>
             </view>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="O5B-tK-zs3" secondAttribute="bottom" id="9DI-Iv-q2m"/>
+                <constraint firstAttribute="trailing" secondItem="O5B-tK-zs3" secondAttribute="trailing" id="ARb-iz-Fjo"/>
+                <constraint firstItem="O5B-tK-zs3" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="qeY-FL-DN0"/>
+                <constraint firstItem="O5B-tK-zs3" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="voI-LK-YKE"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="224" height="183"/>
+            <connections>
+                <outlet property="postImageView" destination="O5B-tK-zs3" id="OnV-Wq-C9z"/>
+            </connections>
             <point key="canvasLocation" x="263.768115942029" y="186.49553571428569"/>
         </collectionViewCell>
     </objects>
