--- a/SurRound/View/Post+Story/Post/PostInfoTableViewCell.xib
+++ b/SurRound/View/Post+Story/Post/PostInfoTableViewCell.xib
@@ -41,7 +41,7 @@
                         <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icons_Avatar" translatesAutoresizingMaskIntoConstraints="NO" id="H52-ym-eo5">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icons_Avatar" translatesAutoresizingMaskIntoConstraints="NO" id="H52-ym-eo5">
                         <rect key="frame" x="16" y="16" width="42" height="42"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="42" id="0nw-ER-FhB"/>
